--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 node_modules
+build
+
+# Django
+*.log
+*.pot
+*.pyc
+__pycache__/
+strive_backend/__pycache__/
+strive_backend/db.sqlite3
+.env
+.venv
